Update spark.md